<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_blue"
    android:padding="8dp">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/user2"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:contentDescription="@string/userImage"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/editText_fullName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:padding="8dp"
        android:drawableStart="@drawable/baseline_person_pin_24"
        android:drawablePadding="8dp"
        android:hint="@string/fullName"
        android:textColorHint="@color/light_green"
        android:textSize="24sp"
        android:inputType="text"
        android:autofillHints="Full Name"
        android:textColor="@color/black"
        android:layout_below="@id/userImage"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/editText_userName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:padding="8dp"
        android:drawableStart="@drawable/baseline_person_pin_24"
        android:drawablePadding="8dp"
        android:hint="@string/firstName"
        android:textColorHint="@color/light_green"
        android:textSize="24sp"
        android:inputType="text"
        android:autofillHints="First Name"
        android:textColor="@color/black"
        android:layout_below="@id/editText_fullName"
        android:layout_alignStart="@id/editText_fullName"/>
    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:padding="8dp"
        android:drawableStart="@drawable/baseline_lock_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:textColorHint="@color/light_green"
        android:textSize="24sp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColor="@color/black"
        android:layout_below="@id/editText_userName"
        android:layout_alignStart="@id/editText_userName"/>
    <RadioGroup
        android:id="@+id/radioGroup_gender"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_Password"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp"
        android:padding="8dp"
        android:layout_alignStart="@id/editText_Password"
        android:gravity="center"
        android:background="@color/mintGreen">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/male"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"
            android:padding="8dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/female"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:padding="8dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="26sp"
        android:backgroundTint="@color/blue"
        android:paddingVertical="8dp"
        android:layout_marginVertical="28dp"
        android:textColor="@color/white"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_below="@id/radioGroup_gender"
        android:layout_toStartOf="@id/button_register"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="26sp"
        android:backgroundTint="@color/pink"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_below="@id/radioGroup_gender"
        android:layout_alignTop="@id/button_login"
        android:layout_alignEnd="@id/radioGroup_gender"/>

</RelativeLayout>